# devros

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup-devenv/: action.yml
.github/workflows/: build.yml  copilot-setup-steps.yml
crates/devros/: Cargo.toml
crates/devros-cli/: Cargo.toml
crates/devros-cli/src/: main.rs
crates/devros-cli/src/commands/: build.rs  deploy.rs  env.rs  mod.rs
crates/devros-core/: Cargo.toml
crates/devros-core/src/: cache.rs  config.rs  deploy.rs  dsv.rs  error.rs  lib.rs  package.rs  workspace.rs
crates/devros-core/src/deploy/: materialize.rs  utils.rs
crates/devros-core/src/dsv/: generators.rs  operation.rs  parser.rs  shell.rs
crates/devros-core/tests/: integration_test.rs
crates/devros-integration-tests/: Cargo.toml
crates/devros-integration-tests/src/: colcon_compat.rs  lib.rs  process_monitor.rs
crates/devros-integration-tests/tests/: colcon_compatibility_test.rs  jobserver_test.rs  parallel_build_test.rs
crates/devros/src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  package.rs  workspace.rs
crates/devros/src/commands/: build.rs  deploy.rs  env.rs  mod.rs
crates/devros/src/deploy/: manager.rs  mod.rs  state.rs
crates/devros/src/dsv/: calculator.rs  generators.rs  local_setup.sh.template  mod.rs  prefix_util.py.template  setup.sh.template
crates/devros/tests/: integration_test.rs
scripts/: clone_references.sh
specs/: 00_overview.md  01_configuration.md  02_workspace_structure.md  03_dependency_resolution.md  04_build_system.md  05_environment_management.md  06_deployment.md  07_supervisor.md  08_cli.md  09_watch.md  10_testing_strategy.md  reference_colcon_environment_management.md
tasks/: 00_roadmap.md
tests/fixtures/simple_workspace/src/pkg_a/: CMakeLists.txt  package.xml
tests/fixtures/simple_workspace/src/pkg_b/: CMakeLists.txt  package.xml
tests/integration_ws/.devros/cache/example_node/: hash.json
tests/integration_ws/.devros/cache/example_py/: hash.json
tests/integration_ws/colcon_build/example_node/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  ament_cmake_symlink_install_targets_0_.cmake  cmake_install.cmake  colcon_command_prefix_build.sh.env  example_publisher  symlink_install_manifest.txt
tests/integration_ws/colcon_build/example_node/.cmake/api/v1/reply/: codemodel-v2-bca15170faca047b21c3.json  directory-.-a26d03f3f8a06a422b81.json  index-2026-01-12T07-47-09-0063.json  target-example_node_uninstall-797c6f6f98a722816454.json  target-example_publisher-96b06666f9a3647f3c23.json  target-uninstall-8d76f32be02db412aa85.json
tests/integration_ws/colcon_build/example_node/ament_cmake_core/: example_nodeConfig.cmake  package.cmake
tests/integration_ws/colcon_build/example_node/ament_cmake_core/stamps/: package.xml.stamp
tests/integration_ws/colcon_build/example_node/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
tests/integration_ws/colcon_build/example_node/ament_cmake_symlink_install/: ament_cmake_symlink_install.cmake  ament_cmake_symlink_install_uninstall_script.cmake
tests/integration_ws/colcon_build/example_node/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
tests/integration_ws/colcon_build/example_py/: colcon_command_prefix_setup_py.sh  colcon_command_prefix_setup_py.sh.env  example_py  package.xml  setup.cfg  setup.py
tests/integration_ws/colcon_build/example_py/example_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/integration_ws/colcon_build/example_py/prefix_override/: sitecustomize.py
tests/integration_ws/colcon_build/example_py/resource/: example_py
tests/integration_ws/colcon_build/example_py/share/example_py/hook/: pythonpath_develop.dsv  pythonpath_develop.ps1  pythonpath_develop.sh
tests/integration_ws/colcon_install/: local_setup.sh  setup.sh
tests/integration_ws/colcon_install/example_node/lib/example_node/: example_publisher
tests/integration_ws/colcon_install/example_node/share/ament_index/resource_index/package_run_dependencies/: example_node
tests/integration_ws/colcon_install/example_node/share/ament_index/resource_index/parent_prefix_path/: example_node
tests/integration_ws/colcon_install/example_node/share/example_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
tests/integration_ws/colcon_install/example_node/share/example_node/cmake/: example_nodeConfig-version.cmake  example_nodeConfig.cmake
tests/integration_ws/colcon_install/example_node/share/example_node/environment/: ament_prefix_path.dsv  path.dsv
tests/integration_ws/colcon_install/example_py/lib/example_py/: example_subscriber
tests/integration_ws/colcon_install/example_py/share/example_py/: package.sh  package.xml
tests/integration_ws/src/example_node/: CMakeLists.txt
tests/integration_ws/src/example_node/src/: example_publisher.cpp
tests/integration_ws/src/example_py/: package.xml  setup.py
tests/integration_ws/src/example_py/example_py/: __init__.py  example_subscriber.py
tests/integration_ws/src/pkg_a_lib/: CMakeLists.txt  package.xml
tests/integration_ws/src/pkg_a_lib/include/pkg_a_lib/: pkg_a_lib.hpp
tests/integration_ws/src/pkg_a_lib/src/: pkg_a_lib.cpp
tests/integration_ws/src/pkg_b_lib/: CMakeLists.txt  package.xml
tests/integration_ws/src/pkg_b_lib/include/pkg_b_lib/: pkg_b_lib.hpp
tests/integration_ws/src/pkg_b_lib/src/: pkg_b_lib.cpp
tests/integration_ws/src/pkg_c_app/: CMakeLists.txt  package.xml
tests/integration_ws/src/pkg_c_app/src/: main.cpp
tests/integration_ws/src/pkg_d_py/: package.xml  setup.cfg  setup.py
tests/integration_ws/src/pkg_d_py/pkg_d_py/: __init__.py
tests/integration_ws/src/pkg_e_standalone/: CMakeLists.txt  package.xml
tests/integration_ws/src/pkg_e_standalone/src/: standalone_node.cpp
tests/scripts/: test_colcon_compatibility.sh
