[package]
name = "devros-integration-tests"
description = "Integration tests for devros - ROS 2 workflow management tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
devros-core = { path = "../devros-core" }

# Utilities
camino.workspace = true
walkdir.workspace = true
tempfile.workspace = true
blake3.workspace = true
bstr.workspace = true
similar.workspace = true

# Error handling
miette.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# None needed - this crate only contains integration tests
