[package]
name = "devros"
description = "ROS 2 workflow management tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "devros"
path = "src/main.rs"

[lib]
name = "devros"
path = "src/lib.rs"

[dependencies]
# CLI
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
quick-xml.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
miette.workspace = true
thiserror.workspace = true

# Logging / Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
camino.workspace = true
walkdir.workspace = true
petgraph.workspace = true
blake3.workspace = true
chrono.workspace = true

# Jobserver (GNU Make protocol)
jobserver.workspace = true

[dev-dependencies]
tempfile.workspace = true
