<?xml version="1.0"?>
<package format="3">
  <name>example_py</name>
  <version>0.1.0</version>
  <description>Example ROS 2 Python package for integration testing</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>example_node</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
