<?xml version="1.0"?>
<package format="3">
  <name>pkg_a_lib</name>
  <version>0.1.0</version>
  <description>Library package A - no workspace dependencies (can build in parallel with pkg_b_lib)</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
