<?xml version="1.0"?>
<package format="3">
  <name>pkg_c_app</name>
  <version>0.1.0</version>
  <description>Application package C - depends on pkg_a_lib and pkg_b_lib (must wait for both)</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>pkg_a_lib</depend>
  <depend>pkg_b_lib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
