<?xml version="1.0"?>
<package format="3">
  <name>pkg_d_py</name>
  <version>0.1.0</version>
  <description>Python package D - no workspace dependencies (can build in parallel)</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
