<?xml version="1.0"?>
<package format="3">
  <name>pkg_b</name>
  <version>0.1.0</version>
  <description>A test package that depends on pkg_a</description>
  <maintainer email="test@example.com">Test User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pkg_a</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
